@@ -1,3 +1,11 @@
+2012-01-03  Rene Liebscher <R.Liebscher@gmx.de>
+
+	patch #7629 add support for atmega48p
+	* avrdude.conf.in: Added m48p with parent m48 + different signature
+	
+	* avrdude.conf.in: made part parents (m88p = m88 + different signature,
+	m168p = m168 + different signature)
+
 2012-01-02  Rene Liebscher <R.Liebscher@gmx.de>
 
 	bug #21663 AT90PWM efuse incorrect
